# BartDB

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh  benchmark_disk.sh  benchmark_distributed.sh  benchmark_distributed_read.sh  benchmark_network.sh
src/btreelib/: CMakeLists.txt  abstract_storage_engine.h  b_tree.cpp  b_tree.h  b_tree_node.h  database.cpp  database.h  fileio.h  fixed_string.h  lib.cpp  memory_storage_engine.h  test1.bartdb
src/client/: CMakeLists.txt  client.cpp  murmurhash.h
src/dbprotocollib/: CMakeLists.txt  server_protocol.cpp  server_protocol.h
src/server/: CMakeLists.txt  server.cpp
test/: CMakeLists.txt  analysis.ipynb  benchmark.cpp  disk_test.cpp  distribution_analysis.ipynb  network_analysis.ipynb  packet_test.cpp  test.cpp
